# FuncPrinter

./: CMakeLists.txt  FuncPrinter.cpp  ReadMe.md  analyze.py  analyze_preprocess.py
testcases/preprocessed_test1/: nlc.c  nls.c.tmp.c
testcases/project_test1/: CMakeLists.txt  common.h  lib.c  main.c
testcases/test1/: test.c
